--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ethers": "^5.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-linkify": "^1.0.0-alpha",
     "react-loadingg": "^1.7.2",
     "react-scripts": "3.2.0"
   },
